--- a/test/conf/cassandra.yaml
+++ b/test/conf/cassandra.yaml
@@ -52,3 +52,4 @@ enable_sasi_indexes: true
 enable_materialized_views: true
 enable_drop_compact_storage: true
 file_cache_enabled: true
+auto_hints_cleanup_enabled: true
